--- a/dz/src/App.css
+++ b/dz/src/App.css
@@ -2,3 +2,25 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.content {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  align-items: end;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+h1 {
+  font-size: 1rem;
+  text-align: center;
+}
+
+img {
+  width: 100px;
+}
