--- a/dz/src/App.css
+++ b/dz/src/App.css
@@ -2,3 +2,15 @@ body {
   margin: 0;
   padding: 0;
 }
+.display {
+  display: grid;
+  grid-template-columns: 80% 20%;
+  gap: 20px;
+
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+
+}
